<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="main_activity_description">Recherche un restaurant.</string>
    <string name="login">Connexion</string>
    <!--string name="google_sign_in_text">Connexion avec Google</string-->
    <string name="title">I\'m Hungry</string>
    <string name="nav_map">Map View</string>
    <string name="nav_list">List View</string>
    <string name="nav_workmates">Workmates</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- AUTHENTICATION ACTIVITY -->
    <string name="error_not_connected">You should be connected</string>
    <string name="error_authentication_canceled">"Authentication cancelled"</string>
    <string name="error_no_internet">"no connexion"</string>
    <string name="error_unknown_error">"An unknown error has occurred"</string>
    <string name="connection_succeed">Successful authentication !</string>
    <string name="button_login_text_logged">Display profile</string>
    <string name="button_login_text_not_logged">Log in</string>
    <string name="server_client_id">967752545343-gr34mo8qsq2fr1oeqtjj3i7o1gnbb603.apps.googleusercontent.com</string>
    <string name="facebook_application_id" translatable="false">771461730309446</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb771461730309446</string>
    <string name="facebook_client_token">1b69c12d7ebf9ef7b60bfbb5987e0329</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="logo_go4lunch">logo</string>
    <string name="picture_profile">picture</string>
    <string name="text_input_username">userName</string>
    <string name="text_view_email">Email</string>
    <string name="button_sign_out_account">logOut</string>
    <string name="button_update_account">Update</string>
    <string name="button_delete_account">delete</string>
    <string name="popup_message_confirmation_delete_account">Do you want to delete your account?</string>
    <string name="popup_message_choice_yes">Your account has been deleted</string>
    <string name="info_no_username_found">No username found</string>
    <string name="info_no_email_found">No Email found</string>
    <string name="lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>


    <string name="restaurant_name">Restaurant\'s name</string>
    <string name="restaurant_address">Restaurant\'s address</string>
    <string name="call">Call</string>
    <string name="like">like</string>
    <string name="website">website</string>
    <string name="no_lunch">You aren\'t eating this noon?</string>
    <string name="workmates">Available workmates</string>
    <string name="photo_profile">Avatar</string>
    <string name="isjoining">is joining</string>

    <!-- PHONE CALL -->
    <string name="no_phone_number">"Phone number is not available"</string>
    <string name="no_permission_for_call">"Go4Lunch does not have permission to make calls"</string>

    <!-- WEB SITE -->
    <string name="no_website">"No website found"</string>
    <string name="place_name">Name</string>
    <string name="place_address">Address</string>
    <string name="place_open">opening hours</string>
    <string name="no_hours">hours not available</string>
    <string name="closed_today">closed</string>
    <string name="open_today">open</string>
    <string name="open_at">open at</string>
    <string name="place_distance">Distance</string>
    <string name="pic_team">Number</string>
    <string name="place_number_choice">Num</string>
    <string name="place_star">Star</string>
    <string name="place_photo">Photo</string>


</resources>