<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/article_item"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_name"
            />

        <TextView
            android:id="@+id/restaurant_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_address" />

        <TextView
            android:id="@+id/restaurant_openinghours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_open" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.95"
        android:orientation="vertical">

        <TextView
            android:id="@+id/restaurant_proximity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_distance"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/restaurant_choices_ic"
                android:contentDescription="@string/pic_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="05dp"
                android:src="@drawable/ic_baseline_team_24"
                android:layout_marginHorizontal="5dp"/>

            <TextView
                android:id="@+id/restaurant_choices_nb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_number_choice" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/restaurant_star1"
                android:contentDescription="@string/place_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="05dp"
                android:src="@drawable/ic_baseline_star_24"/>
            <ImageView
                android:id="@+id/restaurant_star2"
                android:contentDescription="@string/place_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="05dp"
                android:src="@drawable/ic_baseline_star_24"/>
            <ImageView
                android:id="@+id/restaurant_star3"
                android:contentDescription="@string/place_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="05dp"
                android:src="@drawable/ic_baseline_star_24"/>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/restaurant_photo"
        android:contentDescription="@string/place_photo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:scaleType="centerCrop"
        android:layout_margin="5dp"/>

</LinearLayout>