<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <!-- USER DATA CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/default_large_margin">

            <!-- LOGO -->
            <ImageView
                android:contentDescription="@string/logo_go4lunch"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@drawable/ic_logo_go4lunch"/>

            <!-- PROGRESS BAR -->
            <ProgressBar
                android:id="@+id/profile_activity_progress_bar"
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:visibility="invisible"
                android:layout_margin="@dimen/default_large_margin"/>

            <!-- PROFILE IMAGE -->
            <ImageView
                android:contentDescription="@string/picture_profile"
                android:id="@+id/profile_activity_imageview_profile"
                android:layout_width="90dp"
                android:layout_height="90dp" />

        </LinearLayout>


        <!-- PROFILE USERNAME -->
        <EditText
            android:id="@+id/profile_activity_edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_text_size"
            android:text="@string/text_input_username"
            android:layout_margin="@dimen/default_margin"/>

        <!-- PROFILE EMAIL CONTAINER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/default_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_email"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold"/>

            <!-- PROFILE EMAIL -->
            <TextView
                android:id="@+id/profile_activity_text_view_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_text_size"
                android:paddingStart="@dimen/default_margin"/>

        </LinearLayout>

    </LinearLayout>

    <!-- BUTTONS CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_weight="1">


        <!-- BUTTON SIGN OUT -->
        <Button
            android:id="@+id/profile_activity_button_sign_out"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/default_margin"
            android:background="@color/colorPrimary"
            android:padding="@dimen/default_margin"
            android:text="@string/button_sign_out_account"
            android:textColor="#fff"
            android:textSize="@dimen/default_text_size" />

        <!-- BUTTON UPDATE ACCOUNT -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/profile_activity_button_update"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/default_margin"
                android:background="@color/colorAccent"
                android:padding="@dimen/default_margin"
                android:text="@string/button_update_account"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size" />

            <Button
                android:id="@+id/profile_activity_button_delete"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/default_margin"
                android:background="@color/colorAccent"
                android:padding="@dimen/default_margin"
                android:text="@string/button_delete_account"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>