<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantInformation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/photo_restaurant"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            tools:srcCompat="@drawable/ic_background" />

        <LinearLayout
            android:id="@+id/information_restaurant_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorOrange"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:id="@+id/name_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/restaurant_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurant_name"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/star1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_baseline_star_golden" />

                <ImageView
                    android:id="@+id/star2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_baseline_star_golden" />

                <ImageView
                    android:id="@+id/star3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_baseline_star_golden" />

            </LinearLayout>

            <TextView
                android:id="@+id/restaurant_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_address"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.3">

                <ImageView
                    android:id="@+id/phone_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_phone_24"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call"
                    android:textColor="@color/colorOrange"
                    android:textAllCaps="true"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.3">

                <ImageView
                    android:id="@+id/like_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_star_24"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/like"
                    android:textColor="@color/colorOrange"
                    android:textAllCaps="true"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0.3"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/website_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_public_24"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website"
                    android:textColor="@color/colorOrange"
                    android:textAllCaps="true"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_workmates_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <!-- DECLARING FLOATING ACTION BUTTON -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/restoToday_FloatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        app:backgroundTint="@android:color/white"
        android:src="@drawable/ic_baseline_check_circle_24"
        app:layout_anchor="@id/information_restaurant_container"
        app:layout_anchorGravity="top|right|end"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>